[package]
name = "pdf-handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pdf-handler"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
hayro-syntax = "0.4.0"
hayro = "0.4.0"
krilla = { version = "0.5.0", features = ["pdf"] }
anyhow = "1.0"
tiny-skia = "0.11"
image = "0.25"

# CLI-only dependencies
clap = { version = "4.5", features = ["derive"], optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = ["cli"]
cli = ["clap"]
wasm = ["wasm-bindgen", "serde", "serde-wasm-bindgen", "base64"]
